src/test/deca/context/invalid/class/19_this4.deca
/* Description:
    test invalide en utilisant this



    Historique:
      cree le 18/01/2020
*/

   class A {
    int y;
    void setY() {
      this.x = 4;
    }

   }
